final width and gap fixes

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@ div{
 }
 
 .app{
-    width: 100%;
     display: flex;
     gap: 32px;
     border-radius: 20px;
@@ -19,7 +18,7 @@ div{
 
 .sidebar-left{
     order: 1;
-    width: 15%;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     align-self: stretch;
@@ -225,7 +224,7 @@ div{
 
 .main-content{
     order: 2;
-    flex: 1;
+    flex-grow: 3;
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -383,6 +382,7 @@ div{
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    gap: 7px;
 }
 
 .watched-cards-item{
@@ -727,7 +727,7 @@ div{
 
 .mentors-item-title{
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 .mentors-item-title-text{
@@ -735,6 +735,7 @@ div{
     font-size: 12px;
     font-weight: 400;
     text-transform: capitalize;
+    text-align: center;
 }
 
 .mentors-item-action{
@@ -760,7 +761,7 @@ div{
 
 .sidebar-right{
     order: 3;
-    width: 20%;
+    flex-grow: 2;
     display: flex;
     flex-direction: column;
     padding: 32px;;
@@ -1040,9 +1041,13 @@ div{
         flex-wrap: wrap;
         gap: 20px;
         width: 100%;
+        padding: 20px;
     }
     .watched-cards-item{
         max-width: 100%;
+        width: 100%;
+        justify-content: space-between;
+        padding: 15px 10px;
     }
 
     .videos-header{
